--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,12 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: Checkout
+      uses: actions/checkout@v.2.0.0
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2.7.2
+      with:
+        submodule_update: ON
+        run_tests: ON
