--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -30,5 +30,5 @@ jobs:
         aqtversion: '==0.9'
         py7zrversion: '==0.7'
         extra: '--external 7z'
-    - run: qmake
+    - run: qmake -makefile -project 
     - run: make
