--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,8 +20,6 @@ jobs:
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
-    - name: Setup
-      uses: actions/install-qt-action@v2
       with:
         version: '5.12.9'
         host: 'linux'
@@ -33,5 +31,7 @@ jobs:
         aqtversion: '==0.9'
         py7zrversion: '==0.7'
         extra: '--external 7z'
-    - run: qmake
+    - run: ls
+    - run: pwd
+    - run: qmake -makefile -project
     - run: make
