--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -18,6 +18,17 @@ jobs:
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+    - name: Cache Qt
+      id: cache-qt
+      uses: actions/cache@v1
+      with:
+        path: ../Qt
+        key: ${{ runner.os }}-QtCache
+
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        cached: ${{ steps.cache-qt.outputs.cache-hit }}
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
@@ -26,9 +37,13 @@ jobs:
         target: 'desktop'
         dir: '${{ github.workspace }}/example/'
         install-deps: 'true'
+        mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
         cached: 'false'
         aqtversion: '==0.9'
         py7zrversion: '==0.7'
         extra: '--external 7z'
-    - run: qmake -makefile -project 
+    - run: ls
+    - run: pwd
+    - run: cd VirtusProxyGUI
+    - run: qmake "CONFIG+=VirtusProxyGUI" VirtusProxyGUI.pro
     - run: make
