--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -46,5 +46,5 @@ jobs:
     - run: pwd
     - run: cd VirtusProxyGUI
     - run: ls
-    - run: qmake "CONFIG+=VirtusProxyGUI" VirtusProxyGUI.pro
+    - run: qmake "CONFIG+=VirtusProxyGUI" ./VirtusProxyGUI/VirtusProxyGUI.pro
     - run: make
